--- a/pom.xml
+++ b/pom.xml
@@ -432,6 +432,7 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>org.jacoco.agent</artifactId>
                 <classifier>runtime</classifier>
+                <scope>test</scope>
                 <version>${jacoco.version}</version>
             </dependency>
             <!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-testng -->
