--- a/components/org.wso2.carbon.identity.oauth/pom.xml
+++ b/components/org.wso2.carbon.identity.oauth/pom.xml
@@ -34,6 +34,15 @@
     <url>http://wso2.org</url>
 
     <dependencies>
+        <!--
+            This dependency is added as a quick fix
+            for https://github.com/wso2-extensions/identity-inbound-auth-oauth/issues/543. Remove this tomcat
+            dependency only after fixing the issue. Otherwise will result in build failures when javadoc plugin runs.
+         -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-coyote</artifactId>
+        </dependency>
         <dependency>
             <groupId>commons-lang.wso2</groupId>
             <artifactId>commons-lang</artifactId>
