--- a/pom.xml
+++ b/pom.xml
@@ -475,6 +475,15 @@
                 <scope>test</scope>
             </dependency>
 
+            <!--
+                See https://github.com/wso2-extensions/identity-inbound-auth-oauth/issues/543 for the requirement to
+                 have this dependency
+            -->
+            <dependency>
+                <groupId>org.apache.tomcat</groupId>
+                <artifactId>tomcat-coyote</artifactId>
+                <version>${tomcat.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -708,6 +717,7 @@
         <joda.wso2.version>2.8.2.wso2v1</joda.wso2.version>
         <joda.wso2.osgi.version.range>[2.8.2,3.0.0)</joda.wso2.osgi.version.range>
 
+        <tomcat.version>7.0.69</tomcat.version>
         <tomcat-util.version>3.3.2</tomcat-util.version>
         <tomcat.wso2.imp.pkg.version.range>[1.7.0,2.0)</tomcat.wso2.imp.pkg.version.range>
 
@@ -741,15 +751,7 @@
         <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
         <javaee.web.api.version>7.0</javaee.web.api.version>
         <h2database.version>1.0.60</h2database.version>
-
         <commons-codec.test.version>1.4</commons-codec.test.version>
-
-
-        <!--
-            Please do not remove this property until all javadoc comments are fixed. Removing this will cause build
-            failures during component release.
-         -->
-        <maven.javadoc.skip>true</maven.javadoc.skip>
     </properties>
 
 </project>
