--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
     </scm>
 
     <modules>
+        <module>test-utils/org.wso2.carbon.identity.common.testng</module>
         <module>components/org.wso2.carbon.identity.oauth</module>
         <module>components/org.wso2.carbon.identity.oauth.common</module>
         <module>components/org.wso2.carbon.identity.oauth.endpoint</module>
