--- a/test-utils/org.wso2.carbon.identity.oauth.common.testng/pom.xml
+++ b/test-utils/org.wso2.carbon.identity.oauth.common.testng/pom.xml
@@ -29,7 +29,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.wso2.carbon.identity.oauth.common.testng</artifactId>
     <packaging>jar</packaging>
-    <name>WSO2 Carbon - OAuth</name>
+    <name>WSO2 Carbon - OAuth Test Common utilities</name>
     <description>A custom wso2 products or solution</description>
     <url>http://wso2.org</url>
 
@@ -70,10 +70,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon.identity.inbound.auth.oauth2</groupId>
-            <artifactId>org.wso2.carbon.identity.oauth</artifactId>
-            <version>5.3.20</version>
-            <scope>provided</scope>
+            <groupId>commons-codec.wso2</groupId>
+            <artifactId>commons-codec</artifactId>
         </dependency>
     </dependencies>
 
