--- a/components/org.wso2.carbon.identity.oauth.dcr.endpoint/src/main/resources/api.identity.oauth.dcr.endpoint.yaml
+++ b/components/org.wso2.carbon.identity.oauth.dcr.endpoint/src/main/resources/api.identity.oauth.dcr.endpoint.yaml
@@ -27,13 +27,13 @@ paths:
   /register:
     post:
       description: |
-        This API is used to create an OAuth2 application.
+        This API is used to create an OAuth2 application. If your want to register your application using the implicit or authorization_code password grant types, you need to provide the redirect_uris data type in your API request.
+        If you are using the password grant type to sign your application, you don't need to use the redirect_uri data type. Check the example that is given below.
       x-wso2-request: |
         curl -X POST -H "Authorization: Basic YWRtaW46YWRtaW4=" -H
         "Content-Type: application/json" -d '{
           "redirect_uris":["https://client.example.org/callback"],
           "client_name": "application_1",
-          "ext_param_owner": "application_owner",
           "grant_types": ["password"] }'
         "https://localhost:9443/api/identity/oauth2/dcr/v1.0/register"
       x-wso2-response: |
@@ -42,7 +42,7 @@ paths:
         "client_secret":"ZJYCqe3GGRvdrudKyZS0XhGv_Z45DuKhCUk0gBR1vZk",
         "client_secret_expires_at": 1577858400,
         "redirect_uris":["https://client.example.org/callback"],
-        "client_name":"application_owner_application_1" }
+        "client_name":"application_1" }
       summary: |
         Registers an OAuth2 application
       operationId: registerApplication
