--- a/components/org.wso2.carbon.identity.oauth.dcr.endpoint/src/main/resources/api.identity.oauth.dcr.endpoint.yaml
+++ b/components/org.wso2.carbon.identity.oauth.dcr.endpoint/src/main/resources/api.identity.oauth.dcr.endpoint.yaml
@@ -27,8 +27,8 @@ paths:
   /register:
     post:
       description: |
-        This API is used to create an OAuth2 application. If your want to register your application using the implicit or authorization_code password grant types, you need to provide the redirect_uris data type in your API request.
-        If you are using the password grant type to sign your application, you don't need to use the redirect_uri data type. Check the example that is given below.
+        This API is used to create an OAuth2 application. If your want to create your application using the implicit or authorization_code grant types, you need to provide the redirect_uris field in your API request.
+        If you are using the any other grant type, such as password, you don't need to use the redirect_uri field. Check the example that is given below.
       x-wso2-request: |
         curl -X POST -H "Authorization: Basic YWRtaW46YWRtaW4=" -H
         "Content-Type: application/json" -d '{
